// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmissionsScreen renders correctly 1`] = `
<SectionList
  ListFooterComponent={[Function]}
  contentInsetAdjustmentBehavior="automatic"
  keyExtractor={[Function]}
  ref={null}
  renderItem={[Function]}
  renderSectionHeader={[Function]}
  sections={
    [
      {
        "data": [
          {
            "co2value": 0.0803,
            "creationDate": "2020-03-01T12:08:16.623Z",
            "emissionModelType": "boat",
            "emissionType": "transport",
            "iconName": "boat",
            "id": "4",
            "onPress": [Function],
            "periodType": "monthly",
            "times": 1,
            "title": "Boat",
            "value": 100,
            "weekDays": [],
          },
        ],
        "title": "Recurring emissions",
      },
      {
        "data": [
          {
            "co2value": 20,
            "creationDate": "2020-03-01T12:08:16.623Z",
            "emissionModelType": "beans",
            "emissionType": "food",
            "iconName": "nutrition",
            "id": "2",
            "isMitigated": false,
            "onPress": [Function],
            "title": "Beans",
            "value": 10,
          },
          {
            "co2value": 0.0803,
            "creationDate": "2020-03-01T12:08:16.623Z",
            "emissionModelType": "boat",
            "emissionType": "transport",
            "iconName": "boat",
            "id": "3",
            "isMitigated": true,
            "onPress": [Function],
            "title": "Boat",
            "value": 100,
          },
        ],
        "date": "2020-03-01T00:00:00+00:00",
      },
      {
        "data": [
          {
            "co2value": 60,
            "creationDate": "2020-01-01T12:08:16.623Z",
            "emissionModelType": "beans",
            "emissionType": "food",
            "iconName": "nutrition",
            "id": "1",
            "isMitigated": false,
            "onPress": [Function],
            "title": "Beans",
            "value": 30,
          },
        ],
        "date": "2020-01-01T00:00:00+00:00",
      },
    ]
  }
  stickySectionHeadersEnabled={true}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
/>
`;

exports[`EmissionsScreen renders correctly if no emissions 1`] = `
<SectionList
  ListFooterComponent={[Function]}
  contentInsetAdjustmentBehavior="automatic"
  keyExtractor={[Function]}
  ref={null}
  renderItem={[Function]}
  renderSectionHeader={[Function]}
  sections={
    [
      {
        "data": [],
        "title": null,
      },
    ]
  }
  stickySectionHeadersEnabled={true}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
/>
`;

exports[`EmissionsScreen renders correctly if only normal emissions 1`] = `
<SectionList
  ListFooterComponent={[Function]}
  contentInsetAdjustmentBehavior="automatic"
  keyExtractor={[Function]}
  ref={null}
  renderItem={[Function]}
  renderSectionHeader={[Function]}
  sections={
    [
      {
        "data": [
          {
            "co2value": 20,
            "creationDate": "2020-03-01T12:08:16.623Z",
            "emissionModelType": "beans",
            "emissionType": "food",
            "iconName": "nutrition",
            "id": "2",
            "isMitigated": false,
            "onPress": [Function],
            "title": "Beans",
            "value": 10,
          },
          {
            "co2value": 0.0803,
            "creationDate": "2020-03-01T12:08:16.623Z",
            "emissionModelType": "boat",
            "emissionType": "transport",
            "iconName": "boat",
            "id": "3",
            "isMitigated": true,
            "onPress": [Function],
            "title": "Boat",
            "value": 100,
          },
        ],
        "date": "2020-03-01T00:00:00+00:00",
      },
      {
        "data": [
          {
            "co2value": 60,
            "creationDate": "2020-01-01T12:08:16.623Z",
            "emissionModelType": "beans",
            "emissionType": "food",
            "iconName": "nutrition",
            "id": "1",
            "isMitigated": false,
            "onPress": [Function],
            "title": "Beans",
            "value": 30,
          },
        ],
        "date": "2020-01-01T00:00:00+00:00",
      },
    ]
  }
  stickySectionHeadersEnabled={true}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
/>
`;

exports[`EmissionsScreen renders correctly if only recurring emissions 1`] = `
<SectionList
  ListFooterComponent={[Function]}
  contentInsetAdjustmentBehavior="automatic"
  keyExtractor={[Function]}
  ref={null}
  renderItem={[Function]}
  renderSectionHeader={[Function]}
  sections={
    [
      {
        "data": [
          {
            "co2value": 0.0803,
            "creationDate": "2020-03-01T12:08:16.623Z",
            "emissionModelType": "boat",
            "emissionType": "transport",
            "iconName": "boat",
            "id": "4",
            "onPress": [Function],
            "periodType": "monthly",
            "times": 1,
            "title": "Boat",
            "value": 100,
            "weekDays": [],
          },
        ],
        "title": "Recurring emissions",
      },
    ]
  }
  stickySectionHeadersEnabled={true}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
/>
`;
